ballista/scheduler/src/state/snapshots/ballista_scheduler__state__execution_stage__tests__resolved_stage_indent_format.snap
---
source: ballista/scheduler/src/state/execution_stage.rs
expression: output
---
=========ResolvedStage[stage_id=1.0, partitions=1]=========
ProjectionExec: expr=[id@0 as id, name@1 as name]
  SortExec: expr=[id@0 ASC], preserve_partitioning=[false]
    CoalesceBatchesExec: target_batch_size=8192
      FilterExec: true
        PlaceholderRowExec
