ballista/scheduler/src/state/snapshots/ballista_scheduler__state__execution_stage__tests__unresolved_stage_tree_format.snap
---
source: ballista/scheduler/src/state/execution_stage.rs
expression: output
---
=========UnResolvedStage[stage_id=1.0, children=0]=========
Inputs{}
┌───────────────────────────┐
│       ProjectionExec      │
│    --------------------   │
│           id: id          │
│         name: name        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          SortExec         │
│    --------------------   │
│          id@0 ASC         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│    CoalesceBatchesExec    │
│    --------------------   │
│     target_batch_size:    │
│            8192           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         FilterExec        │
│    --------------------   │
│      predicate: true      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│     PlaceholderRowExec    │
└───────────────────────────┘
